tests/paczka1/small_fuzzy/10307215.err
Error in line 1: c5N A409 22,7
Error in line 2: TDmC A409 63,4
Error in line 4: beoQuyfo A645 23,5
Error in line 7: 9vbAQ5Gm7 A645 30,8
